--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -3,20 +3,23 @@
 body {
 	margin: 0 20px;
 	background:#f5f5d5;
+	font-family: 'Courier New', simsun, 'ST Song';
 }
 
 header {
     height: 100px;
     overflow: hidden; 
-    background: url("../images/logo.png") no-repeat left 20px;
+    background: url("../images/logo_32.png") no-repeat left 20px;
 	}
 	header h1 {
-		margin: 22px 0 0 55px;
-	    font-size: 38px;
+		margin: 16px 0 0 40px;
+	    font-size: 24px;
 	    font-weight: 900;
 	    letter-spacing: -1px;
 		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 		line-height: 50px;
+		font-family: georgia;
+		font-weight: normal;
 	}
 	header h1 a{
 		color: #000;
@@ -39,6 +42,7 @@ header {
 			color: #666;
 			font-size: 18px;
 			margin-bottom: 1px;
+			font-family: "Hiragino Sans GB","Microsoft YaHei";
 		}
 		.left_box a:hover{
 			background: rgba(248,0,59,0.1)
@@ -68,7 +72,7 @@ header {
 			display: inline;
 			padding: 0;
 			line-height: 1.5;
-			font-family: "楷体";
+			font-family: SimKai,'ST Kaiti';
 }
 
 .right {
@@ -89,7 +93,6 @@ header {
     	background: rgba(102,128,153,0.075);
 		color: rgba(44,63,81,0.5);
 		padding: 2px 5px;
-		font-family: "Source Code Pro",monospace;
 		margin-right: 5px;
     }
 	.right .right_box .label span a{
@@ -101,14 +104,13 @@ header {
     .right .right_box .excerpt{
     	color:#666;
     	line-height: 2;
-    	font-family: simsun,"宋体";
     }
     .right .right_box .excerpt a{
         color:#666;
     }
     .right .right_box .excerpt a.read-all {
     	color: #ff6688;
-    	font-family: "Hiragino Sans GB","WenQuanYi Micro Hei","Microsoft YaHei",tahoma,arial,simsun;
+    	font-family: "Hiragino Sans GB","Microsoft YaHei";
     }
     .right .pagination {
     	border-top: 1px dashed #ccc;
@@ -162,7 +164,7 @@ article {
 	article li,
 	article > blockquote{
 	    line-height: 2;
-        font-family: simsun,"宋体";
+        font-family: simsun;
         font-size: 18px;
         word-wrap:break-word ;
 	}
@@ -171,19 +173,21 @@ article {
 	}
 	article h1{
         font-size: 32px;
+        font-family: "Hiragino Sans GB","Microsoft YaHei";
     }
 	article h2{
 		font-size: 24px;
+		font-weight: bold;
         border-bottom:1px solid rgba(102,128,153,0.2);
         margin:30px 0 20px;
-        font-family:"Hiragino Sans GB","WenQuanYi Micro Hei","Microsoft YaHei",tahoma,arial,simsun;
 	}
 	article h3{
+	    font-size: 16px;
+	    font-weight: bold;
         background: rgba(0, 0, 0, 0.1) none repeat scroll 0 0;
         border-radius: 3px;
         display: inline;
-        font-size: 16px;
-        padding: 0 5px;
+        padding: 2px 5px 0;
     }
 	article .read {
 		float:right;
