--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,14 +33,16 @@
 	        		{% if page.author=="weiwei" %}
 		        	<p>版权协议：<a class="protocol" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎 4.0</a></p>
 		        	<p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
+		        	<p>作　　者：{{ page.date | date: "%F" }}</p>
 		        	<p>发布日期：{{ page.date | date: "%F" }}</p>
 		        	{% else %}
-		        	<p>原文作者：{{ page.author }}</p>
+		        	<p>转载方式：全文转载-无演绎</p>
 		        	<p>原文地址：<a class="url" href="{{ page.source_url }}">{{ page.source_url }}</a></p>
+		        	<p>原文作者：{{ page.author }}</p>
 		        	<p>转载日期：{{ page.date | date: "%F" }}</p>
 		        	{% endif %}
 	        	</div>
-	        	<img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&w=70&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
+	        	<img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&w=128&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
 	        </div>
         	{{content}}
         </article>
@@ -59,7 +61,7 @@
         </div>
         
         <div class="comment">
-            <h2>我要发表看法</h2>
+            <h2>评论</h2>
             <a class="cloud-tie-join-count" href="javascript:void(0);">
               <span class="join-count">0</span>
               <span class="join-text">条</span>
