--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -154,10 +154,8 @@ header {
 article {
 	margin-bottom:50px;
 	}
-	article > img {
-	   min-width: 320px;
+	article > p > img {
 	   max-width: 800px;
-	   text-align: center;
 	}
 	article > p,
 	article li,
@@ -325,6 +323,9 @@ footer {
     }
     .mobile_content+.left .outline > a{
         display: none;
+    }
+    article > p > img {
+       max-width: 320px;
     }
 } 
 
