--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,30 +21,46 @@
 	<div class="right">
 		
         <article>
-        	<h1>{{ page.title }}</h1>
-	        <p class="read">
+            <h1>{{ page.title }}</h1>
+            <p class="read">
                 <span>阅读:</span>
                 <span id="busuanzi_value_page_pv">0</span>
                 <span>评论:</span>
-	            <a class="cloud-tie-join-count" href="javascript:void(0);" id="cloud-tie-join-count"><span class="join-count">0</span></a>
-	        </p>
-	        <div class="copyright fixed">
-	        	<div class="info">
-	        		{% if page.author=="weiwei" %}
-		        	<p>版权协议：<a class="protocol" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎 4.0</a></p>
-		        	<p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
-		        	<p>作　　者：{{ page.date | date: "%F" }}</p>
-		        	<p>发布日期：{{ page.date | date: "%F" }}</p>
-		        	{% else %}
-		        	<p>转载方式：全文转载-无演绎</p>
-		        	<p>原文地址：<a class="url" href="{{ page.source_url }}">{{ page.source_url }}</a></p>
-		        	<p>原文作者：{{ page.author }}</p>
-		        	<p>转载日期：{{ page.date | date: "%F" }}</p>
-		        	{% endif %}
-	        	</div>
-	        	<img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&w=128&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
+                <a class="cloud-tie-join-count" href="javascript:void(0);" id="cloud-tie-join-count"><span class="join-count">0</span></a>
+            </p>
+	        <div class="author">
+	            {% if page.author=="weiwei" %}
+                <p>作者：{{ page.author }}</p>
+                <p>日期：{{ page.date | date: "%F" }}</p>
+                {% endif %}
 	        </div>
         	{{content}}
+        	<div class="copyright fixed">
+                <div class="info">
+                    {% if page.author=="weiwei" %}
+                    <p>版权协议：<a class="protocol" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎 4.0</a></p>
+                    <p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
+                    <p>发布日期：{{ page.date | date: "%F" }}</p>
+                    <p>分享本文：<b class="jiathis_style">
+                        <a class="jiathis_button_weixin"></a>
+                        <a class="jiathis_button_qzone"></a>
+                        <a class="jiathis_button_tsina"></a>
+                        <a class="jiathis_button_douban"></a>
+                        <a class="jiathis_button_fb"></a>
+                        <a class="jiathis_button_twitter"></a>
+                        <a class="jiathis_button_googleplus"></a>
+                        <a class="jiathis_button_linkedin"></a>
+                    </b>
+                    <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js" charset="utf-8"></script>
+                    <!-- JiaThis Button END --></p>
+                    {% else %}
+                    <p>文章来源：转载-无演绎</p>
+                    <p>原文地址：<a class="url" href="{{ page.source_url }}">{{ page.source_url }}</a></p>
+                    <p>转载日期：{{ page.date | date: "%F" }}</p>
+                    {% endif %}
+                </div>
+                <img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&w=128&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
+            </div>
         </article>
         
         <div class="plugin">
@@ -60,12 +76,8 @@
             </div>
         </div>
         
-        <div class="comment">
-            <h2>评论</h2>
-            <a class="cloud-tie-join-count" href="javascript:void(0);">
-              <span class="join-count">0</span>
-              <span class="join-text">条</span>
-            </a>
+        <div class="plugin">
+            <h2>评论(<a class="cloud-tie-join-count" href="javascript:void(0);"><span class="join-count">0</span>条</a>）</h2>
             {% include comment.html %}
         </div>
         
