--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,13 @@
                     <p>版权协议：<a class="protocol" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎 4.0</a></p>
                     <p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
                     <p>发布日期：{{ page.date | date: "%F" }}</p>
-                    <p>分享本文：<b class="jiathis_style">
+                    {% else %}
+                    <p>文章来源：转载-无演绎</p>
+                    <p>原文地址：<a class="url" href="{{ page.source_url }}">{{ page.source_url }}</a></p>
+                    <p>转载日期：{{ page.date | date: "%F" }}</p>
+                    {% endif %}
+                    <p class="jiathis_style">
+                        <span class="jiathis_txt" style="font-size: 16px;">分享本文：</span>
                         <a class="jiathis_button_weixin"></a>
                         <a class="jiathis_button_qzone"></a>
                         <a class="jiathis_button_tsina"></a>
@@ -50,14 +56,8 @@
                         <a class="jiathis_button_twitter"></a>
                         <a class="jiathis_button_googleplus"></a>
                         <a class="jiathis_button_linkedin"></a>
-                    </b>
+                    </p>
                     <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js" charset="utf-8"></script>
-                    <!-- JiaThis Button END --></p>
-                    {% else %}
-                    <p>文章来源：转载-无演绎</p>
-                    <p>原文地址：<a class="url" href="{{ page.source_url }}">{{ page.source_url }}</a></p>
-                    <p>转载日期：{{ page.date | date: "%F" }}</p>
-                    {% endif %}
                 </div>
                 <img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&w=128&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
             </div>
@@ -77,7 +77,7 @@
         </div>
         
         <div class="plugin">
-            <h2>评论(<a class="cloud-tie-join-count" href="javascript:void(0);"><span class="join-count">0</span>条</a>）</h2>
+            <h2>评论(<span class="join-count">0</span>）</h2>
             {% include comment.html %}
         </div>
         
