--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@
                     <p>转载日期：{{ page.date | date: "%F" }}</p>
                     {% endif %}
                     <p class="jiathis_style">
-                        <span class="jiathis_txt" style="font-size: 16px;">分享本文：</span>
+                        <span class="jiathis_txt" style="font-size: 16px;font-family: simsun;">分享本文：</span>
                         <a class="jiathis_button_weixin"></a>
                         <a class="jiathis_button_qzone"></a>
                         <a class="jiathis_button_tsina"></a>
@@ -77,7 +77,7 @@
         </div>
         
         <div class="plugin">
-            <h2>评论(<span class="join-count">0</span>）</h2>
+            <h2>评论(<span class="join-count">0</span>条）</h2>
             {% include comment.html %}
         </div>
         
