--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,7 +76,7 @@
         </div>
         
         <div class="plugin">
-            <h2>评论(<span class="join-count">0</span>条）</h2>
+            <h2>评论(<span class="cloud-tie-join-count"><span class="join-count">0</span>条</span>）</h2>
             {% include comment.html %}
         </div>
         
