--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -162,6 +162,7 @@ article {
 	article h1{
         font-size: 32px;
         font-family: "Hiragino Sans GB","Microsoft YaHei";
+        margin-bottom: 20px;
     }
 	article h2{
 		font-size: 28px;
@@ -205,7 +206,7 @@ article {
     	color: #999;
     	background: rgba(0,0,0,0.05);
     	padding: 10px;
-		margin: 15px 0;
+		margin: 15px 0 30px 0;
 		font-size: 16px;
 		line-height: 2;
         }
