--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@
             <div class="label">
                 <span>日期:{{ page.date | date: "%F" }}</span>
                 <span>阅读:<b id="busuanzi_value_page_pv">19</b></span>
-                <span>评论:<a class="cloud-tie-join-count" href="javascript:void(0);" id="cloud-tie-join-count"><b class="join-count">0</b></a></span>
+                <span>评论:<a class="cloud-tie-join-count" href="javascript:void(0);" id="cloud-tie-join-count"><b class="join-count" style="color: rgba(44, 63, 81, 0.5); margin: 0;">0</b></a></span>
             </div>
         	{{content}}
         	<div class="copyright fixed">
