--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 	            <div class="label">
 	            	<span>{{ post.date | date: "%F" }}</span>
 	            	{% if post.author %}<span>{{ post.author }}</span>{% endif %}
-	            	{% if post.categories %}<span><a href="{{ root_url }}/{{ post.categories }}">{{ post.categories }}</a></span>{% endif %}
+	            	{% if post.categories %}<span><a href="{{ root_url }}/{{ post.categories }}">{% for cat in site.ww_categories %}{% if post.categories == cat[0] %}{{cat[1]}}{% endif %}{% endfor %}</a></span>{% endif %}
 	            </div>
 	            <div class="excerpt">
 	                {{post.excerpt}}
