--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -170,17 +170,18 @@ article {
 		font-size: 28px;
 		font-weight: bold;
         border-bottom:1px solid rgba(102,128,153,0.2);
-        margin:30px 0 20px;
+        margin:80px 0 20px;
+        line-height: 1.5;
 	}
 	article h3{
 	    font-size: 20px;
         background: rgba(0, 0, 0, 0.1) none repeat scroll 0 0;
         border-radius: 3px;
-        display: inline;
+        display:inline-block
         padding: 2px 5px 0px 5px;
-        margin:30px 0 20px;
+        margin:30px 0 10px;
         text-shadow: 0 1px white;
-        font-weight: bold;
+        
     }
     article > p,
     article > blockquote,
