--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,22 +25,29 @@
             <div class="label">
                 <span>日期:{{ page.date | date: "%F" }}</span>
                 <span>阅读:<b id="busuanzi_value_page_pv">19</b></span>
-                <span>评论:<a class="cloud-tie-join-count" href="javascript:void(0);" id="cloud-tie-join-count"><b class="join-count" style="color: rgba(44, 63, 81, 0.5); margin: 0;">0</b></a></span>
+                <span>评论:<a class="cloud-tie-join-count" href="javascript:void(0);" id="cloud-tie-join-count"><b class="join-count" style="color: rgba(44, 63, 81, 0.5); margin: 0;font-family: "Hiragino Sans GB","Microsoft YaHei";font-size: 16px;">0</b></a></span>
             </div>
         	{{content}}
         	<div class="copyright fixed">
                 <div class="info">
+                {% if page.cc=="no" %}
+                    <p>版权协议：正文未经允许禁止转载，欢迎分享本文链接</p>
+                    <p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
+                    <p>作　　者：{{ page.author }}</p>
+                    <p>发布日期：{{ page.date | date: "%F" }}</p>
+                {% else %}
                     {% if page.author=="weiwei" %}
                     <p>版权协议：<a class="protocol" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎4.0</a></p>
                     <p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
                     <p>作　　者：{{ page.author }}</p>
                     <p>发布日期：{{ page.date | date: "%F" }}</p>
                     {% else %}
-                    <p>文章来源：转载-无演绎</p>
+                    <p>文章来源：网络转载-无演绎-版权归原作者所有</p>
                     <p>原文地址：<a class="url" href="{{ page.source_url }}">{{ page.source_url }}</a></p>
                     <p>作　　者：{{ page.author }}</p>
                     <p>转载日期：{{ page.date | date: "%F" }}</p>
                     {% endif %}
+                {% endif %}
                 </div>
                 <img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&w=128&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
                 <b class="jiathis_style"><a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank" style="margin: 6px"></a></b>
