--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,11 +30,11 @@
         	{{content}}
         	<div class="copyright fixed">
                 <div class="info">
-                {% if page.cc=="no" %}
+                {% if page.cc==1 %}
                     <p>版权协议：正文未经允许禁止转载，欢迎分享本文链接</p>
                     <p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
                     <p>作　　者：{{ page.author }}</p>
-                    <p>发布日期：{{ page.date | date: "%F" }}{{ page.cc }}</p>
+                    <p>发布日期：{{ page.date | date: "%F" }}</p>
                 {% else %}
                     {% if page.author=="weiwei" %}
                     <p>版权协议：<a class="protocol" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎4.0</a></p>
@@ -45,7 +45,7 @@
                     <p>文章来源：网络转载-无演绎-版权归原作者所有</p>
                     <p>原文地址：<a class="url" href="{{ page.source_url }}">{{ page.source_url }}</a></p>
                     <p>作　　者：{{ page.author }}</p>
-                    <p>转载日期：{{ page.date | date: "%F" }}</p>
+                    <p>转载日期：{{ page.date | date: "%F" }} / {{ page.cc }}</p>
                     {% endif %}
                 {% endif %}
                 </div>
