--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@
         	<div class="copyright fixed">
                 <div class="info">
                 {% if page.cc==1 %}
-                    <p>版权协议：正文未经允许禁止转载，欢迎分享本文链接</p>
+                    <p>版权协议：未经允许禁止转载，欢迎分享本文链接</p>
                     <p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
                     <p>作　　者：{{ page.author }}</p>
                     <p>发布日期：{{ page.date | date: "%F" }}</p>
