--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -3,7 +3,7 @@
 body {
 	margin: 0 20px;
 	background:#f5f5d5;
-	font-family:  simsun, 'ST Song';
+	font-family: simsun, STSong, MingLiU, 'LiSong Pro';
 }
 
 header {
@@ -41,7 +41,7 @@ header {
 			padding: 4px;
 			color: #666;
 			margin-bottom: 1px;
-			font-family: "Hiragino Sans GB","Microsoft YaHei";
+			font-family: "Hiragino Sans GB", "Microsoft YaHei", "Microsoft JhengHei";
 		}
 		.left_box a:hover{
 			background: rgba(248,0,59,0.1)
@@ -71,7 +71,7 @@ header {
 			display: inline;
 			padding: 0;
 			line-height: 1.5;
-			font-family: '楷体','ST Kaiti';
+			font-family: kaiti, kaiti_gb2312, STKaiti;
 }
 
 .right {
@@ -87,7 +87,7 @@ header {
         .right .right_box h2 a{
         	font-size: 24px;
         	color: #000;
-        	font-family: "Hiragino Sans GB","Microsoft YaHei";
+        	font-family: "Hiragino Sans GB", "Microsoft YaHei", "Microsoft JhengHei";
     }
     .right .label {
         margin: 5px 5px 5px 0;
@@ -97,7 +97,7 @@ header {
     		color: rgba(44,63,81,0.5);
     		padding: 2px 5px;
     		margin-right: 5px;
-    		font-family: "Hiragino Sans GB","Microsoft YaHei";
+    		font-family: "Hiragino Sans GB", "Microsoft YaHei", "Microsoft JhengHei";
     		border-radius: 2px;
         }
     	.right .label a{
@@ -115,7 +115,7 @@ header {
         }
         .right .excerpt a.read-all {
         	color: #ff6688;
-        	font-family: "Hiragino Sans GB","Microsoft YaHei";
+        	font-family: "Hiragino Sans GB", "Microsoft YaHei", "Microsoft JhengHei";
         }
         .right .excerpt img {
             max-width: 800px;
@@ -163,7 +163,7 @@ article {
     }
 	article h1{
         font-size: 32px;
-        font-family: "Hiragino Sans GB","Microsoft YaHei";
+        font-family: "Hiragino Sans GB", "Microsoft YaHei", "Microsoft JhengHei";
         margin-bottom: 20px;
     }
 	article h2{
